# logiclint-manuscript-jp

./: .gitignore  Dockerfile  README.md  logiclint.ps1  logiclint.sh  pyproject.toml
.logiclint/: logiclint.config.json
logiclint/: cli.py  gemini.py  openai.py  prompting.py  reporting.py  utils.py
logiclint/assets/: __init__.py  rubric.md  schema.json
