[project]
name = "logiclint"
version = "0.1.0"
description = "Manuscript logic lint via Gemini API (fixed rubric + fixed JSON schema)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
logiclint = "logiclint.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["logiclint", "logiclint.assets"]

[tool.setuptools.package-data]
"logiclint.assets" = ["*.md", "*.json"]

